data/derived/comb/progs/unify/prog1589.ml.out
Characters 77-87:
  | n ->  (n mod 10) @ (helper (n / 10)) in
          ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
